--- a/pod/pod.yaml
+++ b/pod/pod.yaml
@@ -1,1 +1,11 @@
+apiVersion: v1
+kind: Pod
+metadata:
+  name: mynginx
+spec:
+  containers:
+    - name: podnginx
+      image: nginx
+      ports:
+       - containerPort: 80
 
